File Name: CHANGES

04/26/2018 FASP 2.1.0:
- Fix OpenMP problem with FASP1.
- Fix a typo in KryPvfgmres.c.
- Update regression results. 

04/11/2018 FASP 2.0.9:
- Update Fortran wrappers: add a new one.
- Update Fortran wrapper function names; update examples accordingly.
- Clean up BLC preconditioners and solvers.
- Fix a few wrong function names. 
- Fix a memory problem in BSR SA method.
- Find more problems with BSR AMG methods; to fix.
- Check 'cannot allocate memory' warning in VFGMRes.
- Fix a policy problem for older CMAKE versions.

03/24/2018 FASP 2.0.8:
- Remove unused arguments in several functions.
- Remove unused OMP counter from fasp.h.
- Change interger definitions of a few local variables.
- Update function decrorations in fasp_functs.h.
- Get rid of all clock().
- Check CPU time output again.
- Update regression results.
- Fixan OMP bug; find another.
- Add VS15 solution.

03/15/2018 FASP 2.0.7:
- Update copyright information.
- Fix some ANSI C uncompatible problems; a lot more still there.
- Update VS10 setting: set FP model to '/precise' in order to get same results in Windows.
- Locate the parameter difference in OpenMP version.
- Move definition ILU_MC_OMP from fasp_const.h to fasp.h.
- Modify README: MS VC compiler does not work for our C code if we do not change .c to .cpp.

03/09/2018 FASP 2.0.6:
- Fix a bug in fasp_mem_free. Set all memory pointers to NULL by hand.
- Update documentation and fasp webpage.
- Update VS10 settings for OMP version in Windows 7.
- Try to remove unused parts in OMP and look for bugs causing divergence.
- Update the diagonally dominant check function.
- Modify the ordering of default direct solvers.

01/04/2018 FASP 2.0.5:
- Try to unify itsolver and itsolver_s. 
- Add regression tests for itsolver_s (iterative methods with safe-net).
- Update regression test results.
- New TODO list.
- Update user's guide for the recent changes.
- Update webpage documentation zip file.
- Update fasp webpage.
